spire-envoy-http/http-services/source/config/envoy.yaml
node:
  id: "frontend"
  cluster: "demo-cluster-spire"
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 3001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: outbound_proxy
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: backend
          http_filters:
          - name: envoy.filters.http.router

  clusters:
  - name: spire_agent
    connect_timeout: 0.25s
    http2_protocol_options: {}
    load_assignment:  
      cluster_name: spire_agent
      endpoints:  
      - lb_endpoints: 
        - endpoint: 
            address:  
              pipe: 
                path: /run/spire/sockets/agent.sock
  - name: backend
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend-envoy
                port_value: 9001
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
            - name: "spiffe://envoy.spire-test.com/ns/default/sa/default/frontend"
              sds_config:
                api_config_source:
                  api_type: GRPC
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
                  transport_api_version: V3
                resource_api_version: V3
          combined_validation_context:
            # validate the SPIFFE ID of the server (recommended)
            default_validation_context:
              match_subject_alt_names:
                exact: "spiffe://envoy.spire-test.com/ns/default/sa/default/backend"
            validation_context_sds_secret_config:
              name: "spiffe://envoy.spire-test.com"
              sds_config:
                api_config_source:
                  api_type: GRPC
                  grpc_services:
                    envoy_grpc:
                      cluster_name: spire_agent
                  transport_api_version: V3
                resource_api_version: V3
          tls_params:
            ecdh_curves:
              - X25519:P-256:P-521:P-384
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
